--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
+    "angularfire2": "^5.0.0-rc.11",
     "cordova-android": "7.0.0",
     "cordova-opentok-android-permissions": "^1.0.1",
     "cordova-plugin-camera": "^4.0.3",
@@ -33,9 +34,11 @@
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "^5.0.4",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "simplewebrtc": "^3.0.2",
     "sw-toolbox": "3.6.0",
     "webrtc-adapter": "^6.3.0",
